--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,6 +166,16 @@ body.frontend{
 #header #logo img{
 }
 
+#header #search-form input{
+	border: 1px solid #e6e6e6;
+	/*height: 24px;*/
+	background-image: url('../img/icon-search.png');
+	background-position: right 5px center;
+	background-repeat: no-repeat;
+	background-color: #fff;
+	background-size: 13px 12px;
+}
+
 #header #icon-menu-responsive{
 	display: none;
 }
@@ -456,6 +466,16 @@ body.frontend{
 
 #featured-item{
 	margin-bottom: 30px;
+}
+
+.btn-simulasi{
+	color: #f15a22 !important;
+	border-color: #f15a22 !important;
+	border-width: 2px !important;
+	background: #fff;
+	margin-bottom: 20px;
+	font-size: 24px;
+	line-height: 80px !important;
 }
 
 #kpr{
